@@ -13,13 +13,11 @@ public class MergeSortEvenOdd<T> implements SortingStrategy<T>
     //Различные варианты вызова сортировки. array - сортируемый лист, компаратор - сортируемое поле,
     //type - сортируемое поле овверайд, even - true чёт, false - нечёт, по умолчанию true.
     @Override
-    public void sort(List<T> array, Comparator<? super T> comparator)
-    {
-        sort(array,comparator,true);
+    public void sort(List<T> array, Comparator<? super T> comparator) {
+        sort(array,comparator,"default",true);
     }
 
-    public void sort(List<T> array, Comparator<? super T> comparator, boolean even)
-    {
+    public void sort(List<T> array, Comparator<? super T> comparator, boolean even) {
         sort(array, comparator, "default", even);
     }
 
@@ -28,71 +26,57 @@ public class MergeSortEvenOdd<T> implements SortingStrategy<T>
         sort(array,comparator,type,true);
     }
 
-    public void sort(List<T> array, Comparator<? super T> comparator, String type, boolean even)
-    {
+    public void sort(List<T> array, Comparator<? super T> comparator, String type, boolean even) {
         //Не сортируем листки с 1 значением
-        if (array.size() <= 1)
-        {
+        if (array.size() <= 1) {
             return;
         }
         sortEvenOdd(array,comparator,type,even);
     }
 
-    private void sortEvenOdd(List<T> array, Comparator<? super T> comparator, String type, boolean even)
-    {
+    private void sortEvenOdd(List<T> array, Comparator<? super T> comparator, String type, boolean even) {
         //Валидация листа
-        T example = array.get(0);
-        switch (type)
-        {
+        T example = array.getFirst();
+        switch (type) {
             case "Year":
             case "Power":
-                if (example instanceof Car)
-                {
+                if (example instanceof Car) {
                     sortCaseCar((List<Car>) array, comparator, type, even);
                 }
                 break;
             case "Pages":
-                if (example instanceof Book)
-                {
+                if (example instanceof Book) {
                     sortCaseBook((List<Book>) array,comparator,type,even);
                 }
                 break;
             case "Weight":
-                if (example instanceof RootCrop)
-                {
+                if (example instanceof RootCrop) {
                     sortCaseCrop((List<RootCrop>) array,comparator,type,even);
                 }
                 break;
             //Поле сортировки по умолчанию.
             default:
-                if (example instanceof Car)
-                {
+                if (example instanceof Car) {
                     sortCaseCar((List<Car>) array, comparator, "Year", even);
-                } else if (example instanceof Book)
-                {
+                } else if (example instanceof Book) {
                     sortCaseBook((List<Book>) array,comparator,"Pages",even);
-                } else if (example instanceof  RootCrop)
-                {
+                } else if (example instanceof  RootCrop) {
                     sortCaseCrop((List<RootCrop>) array,comparator,"Weight",even);
-                } else
-                {
+                } else {
                     System.out.println("Exception: Wrong sorting parameter");
                 }
         }
     }
 
-    private void sortCaseCar(List<Car> array, Comparator<? super T> comparator, String type, boolean even)
-    {
+    private void sortCaseCar(List<Car> array, Comparator<? super T> comparator, String type, boolean even) {
         //Делаем копию листа
         List<Car> stored = new ArrayList<>();
-        for (int i = 0; i < array.size(); i++)
-        {
+        for (int i = 0; i < array.size(); i++) {
             stored.add(array.get(i));
         }
         //Удаляем все чёт/нечёт из копии, сортируем копию, передаём копию на мерж с основным листом
         SortingContext sortingContext = new SortingContext<>(new MergeSort<>());
-        switch (type)
-        {
+        switch (type) {
             case "Year":
                 Comparator<Car> compareToYear = Comparator.comparingInt(Car::getYear);
                 if (even) stored.removeIf(i -> i.getYear() % 2 != 0);
@@ -110,11 +94,9 @@ public class MergeSortEvenOdd<T> implements SortingStrategy<T>
         }
     }
 
-    private void sortCaseBook(List<Book> array, Comparator<? super T> comparator, String type, boolean even)
-    {
+    private void sortCaseBook(List<Book> array, Comparator<? super T> comparator, String type, boolean even) {
         List<Book> stored = new ArrayList<>();
-        for (int i = 0; i < array.size(); i++)
-        {
+        for (int i = 0; i < array.size(); i++) {
             stored.add(array.get(i));
         }
         SortingContext sortingContext = new SortingContext<>(new MergeSort<>());
@@ -127,11 +109,9 @@ public class MergeSortEvenOdd<T> implements SortingStrategy<T>
 
     }
 
-    private void sortCaseCrop(List<RootCrop> array, Comparator<? super T> comparator, String type, boolean even)
-    {
+    private void sortCaseCrop(List<RootCrop> array, Comparator<? super T> comparator, String type, boolean even) {
         List<RootCrop> stored = new ArrayList<>();
-        for (int i = 0; i < array.size(); i++)
-        {
+        for (int i = 0; i < array.size(); i++) {
             stored.add(array.get(i));
         }
         SortingContext sortingContext = new SortingContext<>(new MergeSort<>());
@@ -144,27 +124,21 @@ public class MergeSortEvenOdd<T> implements SortingStrategy<T>
 
     }
 
-    private void mergeCaseCar(List<Car> stored, List<Car> array, String type, Boolean sortEven)
-    {
+    private void mergeCaseCar(List<Car> stored, List<Car> array, String type, Boolean sortEven) {
         //Итерируем по оригиналу и заменяем прошлые значения чёт/нечёт на сортированые.
         int t = 0;
-        switch (type)
-        {
+        switch (type) {
             case "Year":
-                for (int m = 0; m < array.size(); m++)
-                {
-                    if ((array.get(m).getYear() % 2) != 0 ^ sortEven)
-                    {
+                for (int m = 0; m < array.size(); m++) {
+                    if ((array.get(m).getYear() % 2) != 0 ^ sortEven) {
                         array.set(m, stored.get(t));
                         t++;
                     }
                 }
                 break;
             case "Power":
-                for (int m = 0; m < array.size(); m++)
-                {
-                    if ((array.get(m).getPower() % 2) != 0 ^ sortEven)
-                    {
+                for (int m = 0; m < array.size(); m++) {
+                    if ((array.get(m).getPower() % 2) != 0 ^ sortEven) {
                         array.set(m, stored.get(t));
                         t++;
                     }
@@ -174,26 +148,20 @@ public class MergeSortEvenOdd<T> implements SortingStrategy<T>
         }
     }
 
-    private void mergeCaseBook(List<Book> stored, List<Book> array, String type, Boolean sortEven)
-    {
+    private void mergeCaseBook(List<Book> stored, List<Book> array, String type, Boolean sortEven) {
         int t = 0;
-        for (int m = 0; m < array.size(); m++)
-        {
-            if ((array.get(m).getPages() % 2) != 0 ^ sortEven)
-            {
+        for (int m = 0; m < array.size(); m++) {
+            if ((array.get(m).getPages() % 2) != 0 ^ sortEven) {
                 array.set(m, stored.get(t));
                 t++;
             }
         }
     }
 
-    private void mergeCaseCrop(List<RootCrop> stored, List<RootCrop> array, String type, Boolean sortEven)
-    {
+    private void mergeCaseCrop(List<RootCrop> stored, List<RootCrop> array, String type, Boolean sortEven) {
         int t = 0;
-        for (int m = 0; m < array.size(); m++)
-        {
-            if ((array.get(m).getWeight() % 2) != 0 ^ sortEven)
-            {
+        for (int m = 0; m < array.size(); m++) {
+            if ((array.get(m).getWeight() % 2) != 0 ^ sortEven) {
                 array.set(m, stored.get(t));
                 t++;
             }
